--- a/src/sample.fxml
+++ b/src/sample.fxml
@@ -4,11 +4,11 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane alignment="center" hgap="10" prefHeight="537.0" prefWidth="735.0" vgap="10" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane alignment="center" hgap="10" prefHeight="537.0" prefWidth="735.0" vgap="10" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
    <children>
       <AnchorPane prefHeight="504.0" prefWidth="616.0">
          <children>
-            <TableView fx:id="tableView" layoutX="81.0" layoutY="97.0" prefHeight="393.0" prefWidth="454.0">
+            <TableView fx:id="tableView" layoutX="81.0" layoutY="56.0" prefHeight="393.0" prefWidth="454.0">
               <columns>
                 <TableColumn fx:id="ID" prefWidth="45.0" text="ID" />
                 <TableColumn fx:id="Product" prefWidth="328.0" text="Product" />
@@ -20,6 +20,10 @@
                   <Font size="28.0" />
                </font>
             </Text>
+            <TextField fx:id="idfield" layoutX="129.0" layoutY="478.0" prefHeight="25.0" prefWidth="41.0" text="ID" />
+            <Button fx:id="deleteb" layoutX="483.0" layoutY="478.0" mnemonicParsing="false" text="Delete" onAction="#handleDeleteButtonAction" />
+            <Button fx:id="updateb" layoutX="424.0" layoutY="478.0" mnemonicParsing="false" text="Update" onAction="#handleUpdateButtonAction" />
+            <TextField fx:id="hodnota" layoutX="184.0" layoutY="478.0" prefHeight="25.0" prefWidth="229.0" text="Hodnota" />
          </children></AnchorPane>
    </children>
    <columnConstraints>
