Dokoncena Uloha - Insert a SM

--- a/src/sample.fxml
+++ b/src/sample.fxml
@@ -6,7 +6,7 @@
 
 <GridPane alignment="center" hgap="10" prefHeight="537.0" prefWidth="735.0" vgap="10" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
    <children>
-      <AnchorPane prefHeight="504.0" prefWidth="616.0">
+      <AnchorPane prefHeight="521.0" prefWidth="619.0">
          <children>
             <TableView fx:id="tableView" layoutX="81.0" layoutY="56.0" prefHeight="393.0" prefWidth="454.0">
               <columns>
@@ -21,9 +21,10 @@
                </font>
             </Text>
             <TextField fx:id="idfield" layoutX="129.0" layoutY="478.0" prefHeight="25.0" prefWidth="41.0" text="ID" />
-            <Button fx:id="deleteb" layoutX="483.0" layoutY="478.0" mnemonicParsing="false" text="Delete" onAction="#handleDeleteButtonAction" />
-            <Button fx:id="updateb" layoutX="424.0" layoutY="478.0" mnemonicParsing="false" text="Update" onAction="#handleUpdateButtonAction" />
+            <Button fx:id="deleteb" layoutX="483.0" layoutY="478.0" mnemonicParsing="false" onAction="#handleDeleteButtonAction" text="Delete" />
+            <Button fx:id="updateb" layoutX="424.0" layoutY="478.0" mnemonicParsing="false" onAction="#handleUpdateButtonAction" text="Update" />
             <TextField fx:id="hodnota" layoutX="184.0" layoutY="478.0" prefHeight="25.0" prefWidth="229.0" text="Hodnota" />
+            <Button fx:id="insertb" layoutX="537.0" layoutY="478.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="51.0" onAction="#handleInsertButtonAction" text="Insert" />
          </children></AnchorPane>
    </children>
    <columnConstraints>
